--- a/src/pages/clubs/components/new/new.scss
+++ b/src/pages/clubs/components/new/new.scss
@@ -35,6 +35,11 @@
 				border-radius: 50% 50% 10% 10% / 25% 25% 0% 0%;
 				z-index: 1;
 				background-color: white;
+				@include mobile {
+					height: 250px;
+					width: 150px;
+					margin: 5%;
+				}
 
 				.imgContainer {
 					display: flex;
@@ -74,12 +79,18 @@
 							@include ipad {
 								font-size: clamp(1.5rem, 1.5vw, 2.3rem);
 							}
+							@include mobile {
+								font-size: clamp(0.9rem, 0.4vw, 1rem);
+							}
 						}
 						h2 {
 							font-size: clamp(1rem, 1.4vw, 1.3rem);
 							font-weight: 200;
 							@include ipad {
 								font-size: clamp(1.5rem, 1.9vw, 2.3rem);
+							}
+							@include mobile {
+								font-size: clamp(0.9rem, 0.5vw, 1rem);
 							}
 						}
 					}
