--- a/src/pages/get started page/components/fields/domains/fields.scss
+++ b/src/pages/get started page/components/fields/domains/fields.scss
@@ -11,6 +11,9 @@
 	@include ipad {
 		height: 180vh;
 	}
+	@include mobile {
+		height: 200vh;
+	}
 
 	.banner {
 		position: absolute;
@@ -27,6 +30,11 @@
 			top: 17px;
 			width: 60%;
 			height: 8%;
+		}
+		@include mobile {
+			width: 75%;
+			height: 5%;
+			padding-left: 50px;
 		}
 		h1 {
 			color: white;
