--- a/src/pages/FAQ/faq.scss
+++ b/src/pages/FAQ/faq.scss
@@ -27,6 +27,9 @@
 			padding-top: 1vh;
 			padding-bottom: 1vh;
 			cursor: pointer;
+			@include mobile {
+				width: 100vw;
+			}
 
 			h2 {
 				display: flex;
@@ -38,6 +41,9 @@
 				font-size: clamp(0.5rem, 1.5vw, 3rem);
 				@include ipad {
 					font-size: clamp(0.9rem, 3vw, 4rem);
+				}
+				@include mobile {
+					font-size: clamp(0.9rem, 4vw, 4rem);
 				}
 			}
 			.seeMore {
@@ -74,6 +80,10 @@
 			border-top: none;
 			@include ipad {
 				font-size: clamp(0.9rem, 3vw, 4rem);
+			}
+			@include mobile {
+				font-size: clamp(0.9rem, 4vw, 4rem);
+				width: 100vw;
 			}
 		}
 	}
