--- a/src/pages/competitionInfo/components/ciMain2/ciMain2.scss
+++ b/src/pages/competitionInfo/components/ciMain2/ciMain2.scss
@@ -11,6 +11,9 @@
 	@include ipad {
 		height: 150vh;
 	}
+	@include mobile {
+		height: 175vh;
+	}
 
 	.backgroundColumn {
 		height: 100%;
@@ -18,6 +21,12 @@
 		background-color: rgba(221, 239, 241, 0.95);
 		z-index: 1;
 		position: absolute;
+		@include ipad {
+			width: 90%;
+		}
+		@include mobile {
+			width: 100%;
+		}
 	}
 	.bottom {
 		display: flex;
