--- a/src/pages/get started page/components/gs1/gs1.scss
+++ b/src/pages/get started page/components/gs1/gs1.scss
@@ -6,10 +6,14 @@
 	background-color: #f6f6f6;
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	position: relative;
 	flex-direction: column;
 	@include ipad {
 		height: 115vh;
+	}
+	@include mobile {
+		height: 70vh;
 	}
 
 	.backgroundColumn {
@@ -31,6 +35,10 @@
 		margin-top: 5%;
 		@include ipad {
 			flex: 0.3;
+		}
+		@include mobile {
+			width: 98%;
+			margin-top: 0;
 		}
 
 		.container {
@@ -63,15 +71,22 @@
 						font-size: clamp(1rem, 2.9vw, 2rem);
 						line-height: 2vh;
 					}
+					@include mobile {
+						top: 0;
+						font-size: clamp(1rem, 3vw, 2rem);
+						line-height: 2.7vh;
+					}
 				}
 				h2 {
-					margin-top: 10%;
+					margin-top: 1%;
 					font-weight: 400;
 					font-size: clamp(1rem, 1.6vw, 2rem);
-					padding: 5%;
 					line-height: 4vh;
 					@include ipad {
 						font-size: clamp(1rem, 2.7vw, 3rem);
+					}
+					@include mobile {
+						margin-top: 40%;
 					}
 				}
 			}
@@ -88,6 +103,10 @@
 		z-index: 2;
 		margin: 75px;
 		width: 90%;
+		@include mobile {
+			margin: 5%;
+			margin-top: 15%;
+		}
 
 		.right {
 			width: 30%;
@@ -123,7 +142,7 @@
 					h1 {
 						font-size: clamp(1rem, 2vw, 3rem);
 						font-weight: 600;
-						margin: 10px;
+						margin: 1%;
 						@include ipad {
 							font-size: clamp(1rem, 4vw, 3rem);
 						}
@@ -131,7 +150,7 @@
 					h2 {
 						font-weight: 500;
 						margin-bottom: 195px;
-						margin: 10px;
+						margin: 1%;
 						font-size: clamp(1rem, 1.7vw, 2rem);
 						@include ipad {
 							font-size: clamp(1rem, 4vw, 3rem);
