--- a/src/pages/get started page/components/resources/resources.scss
+++ b/src/pages/get started page/components/resources/resources.scss
@@ -36,6 +36,9 @@
 		align-items: center;
 		justify-content: center;
 		flex-direction: row;
+		@include mobile {
+			margin-bottom: 100px;
+		}
 
 		.infoContainer {
 			position: absolute;
@@ -49,6 +52,9 @@
 			@include ipad {
 				margin-top: 450px;
 				width: 100%;
+			}
+			@include mobile {
+				margin-top: 300px;
 			}
 
 			.infoBox {
@@ -66,6 +72,11 @@
 				@include ipad {
 					width: 25%;
 					margin: 5%;
+				}
+				@include mobile {
+					width: 30%;
+					height: 100px;
+					margin: 3%;
 				}
 
 				h1 {
@@ -93,6 +104,7 @@
 		.cards {
 			display: flex;
 			flex-direction: row;
+			width: 100%;
 			justify-content: space-around;
 			height: 570px;
 			width: 80%;
@@ -101,10 +113,13 @@
 				width: 100%;
 				height: 370px;
 			}
+			@include mobile {
+				justify-content: space-between;
+			}
 		}
 		.card {
 			height: 574px;
-			width: 17%;
+			width: 19%;
 			margin: 20px;
 			border-radius: 200px;
 			margin-top: 200px;
@@ -113,6 +128,11 @@
 				height: 100%;
 				width: 20%;
 				margin-top: 100px;
+			}
+			@include mobile {
+				width: 30%;
+				height: 100%;
+				margin-top: 125px;
 			}
 			img {
 				width: 100%;
