--- a/src/pages/home/components/competition/competitionInfo.scss
+++ b/src/pages/home/components/competition/competitionInfo.scss
@@ -1,7 +1,7 @@
 @import "../../../../global.scss";
 
 .competition-i {
-	height: 100vh;
+	height: auto;
 	background-color: #f5f5f5;
 	@include ipad {
 		height: 90vh;
@@ -13,6 +13,9 @@
 		align-items: center;
 		justify-content: center;
 		position: relative;
+		@include mobile {
+			height: 100%;
+		}
 
 		.column {
 			position: absolute;
@@ -33,6 +36,10 @@
 			@include ipad {
 				width: 90%;
 				height: 90vh;
+			}
+			@include mobile {
+				width: 100%;
+				height: 100%;
 			}
 			img {
 				height: 90%;
