--- a/src/pages/partners/components/partnersLanding/partnersLanding.scss
+++ b/src/pages/partners/components/partnersLanding/partnersLanding.scss
@@ -48,6 +48,10 @@
 			justify-content: space-around;
 			bottom: 75px;
 			position: absolute;
+			@include mobile {
+				width: 80vw;
+				min-height: 10vw;
+			}
 
 			.top {
 				font-family: Hind;
@@ -73,6 +77,10 @@
 					font-size: 20px;
 					text-align: center;
 					padding-bottom: 100px;
+					@include mobile {
+						font-size: clamp(0.9rem, 5vw, 4rem);
+						width: 300px;
+					}
 				}
 			}
 		}
