--- a/src/pages/partners/components/supporter/Supporter.scss
+++ b/src/pages/partners/components/supporter/Supporter.scss
@@ -41,8 +41,12 @@
 					height: 150px;
 					transition: all 0.5s ease-in-out;
 					cursor: pointer;
-					margin: 10%;
+					margin: 10% 0 10% 0;
 
+					@include mobile {
+						width: 35vw;
+						height: 15vh;
+					}
 					img {
 						width: 80%;
 						height: 80%;
