--- a/src/global.scss
+++ b/src/global.scss
@@ -19,3 +19,58 @@ $mobileWidth: 414px;
 		@content;
 	}
 }
+
+.dividerBar {
+	width: 100%;
+	height: 10vw;
+	background-color: $black;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	@include ipad {
+		height: 15vw;
+	}
+	@include ipad {
+		height: 20vw;
+	}
+	.barText {
+		color: white;
+		font-family: "Saira", sans-serif;
+		font-size: clamp(1rem, 3vw, 3rem);
+		text-align: center;
+		@include ipad {
+			font-size: clamp(1rem, 5vw, 3rem);
+		}
+		@include mobile {
+			font-size: clamp(2rem, 4vw, 4rem);
+		}
+	}
+}
+
+.dividerBarBlue {
+	width: 100%;
+	height: 10vw;
+	background-color: $brandColor;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	@include ipad {
+		height: 15vw;
+	}
+	@include ipad {
+		height: 20vw;
+	}
+
+	.barText {
+		color: white;
+		font-family: "Saira", sans-serif;
+		font-size: clamp(1rem, 3vw, 3rem);
+		text-align: center;
+		@include ipad {
+			font-size: clamp(2rem, 4vw, 4rem);
+		}
+		@include mobile {
+			font-size: clamp(2rem, 3vw, 3rem);
+		}
+	}
+}
