--- a/src/pages/competitionInfo/components/ciMain/ciMain.scss
+++ b/src/pages/competitionInfo/components/ciMain/ciMain.scss
@@ -40,6 +40,10 @@
 			padding: 5%;
 			margin-top: 0%;
 		}
+		@include mobile {
+			padding: 5%;
+			margin-top: 5%;
+		}
 
 		.container {
 			width: 100%;
@@ -85,6 +89,12 @@
 						font-size: clamp(1rem, 3.1vw, 2rem);
 						padding: 8%;
 						line-height: 3.5vw;
+					}
+					@include mobile {
+						margin-top: 20%;
+						font-size: clamp(1rem, 3.1vw, 2rem);
+						padding: 5%;
+						line-height: 4vw;
 					}
 				}
 			}
