--- a/src/pages/get started page/components/devices/Devices.scss
+++ b/src/pages/get started page/components/devices/Devices.scss
@@ -35,7 +35,8 @@
 				margin-top: 250px;
 			}
 			@include mobile {
-				margin-top: 50px;
+				margin-top: 120px;
+				width: 100vw;
 			}
 			.infoBox {
 				position: relative;
@@ -56,8 +57,8 @@
 				}
 				@include mobile {
 					height: 13vh;
-					width: 30%;
-					margin: 3%;
+					width: 25%;
+					margin: 2.5%;
 				}
 
 				h1 {
@@ -100,7 +101,7 @@
 		.card {
 			height: 100%;
 			width: 40%;
-			margin: 1%;
+			margin: 5%;
 			border-radius: 200px;
 			margin-top: 200px;
 			display: flex;
@@ -109,6 +110,10 @@
 			position: relative;
 			@include ipad {
 				width: 28%;
+				margin: 1%;
+			}
+			@include mobile {
+				width: 40%;
 				margin: 1%;
 			}
 			img {
@@ -123,6 +128,10 @@
 				@include ipad {
 					width: 90%;
 					height: 90%;
+				}
+				@include mobile {
+					width: 100%;
+					height: 100%;
 				}
 			}
 		}
