--- a/src/pages/partners/components/previous supporter/PreviousSupporter.scss
+++ b/src/pages/partners/components/previous supporter/PreviousSupporter.scss
@@ -21,6 +21,9 @@
 			justify-content: space-around;
 			flex-wrap: wrap;
 			padding: 5% 0 5% 0;
+			@include mobile {
+				margin: 5%;
+			}
 
 			a {
 				font-size: clamp(1rem, 2vw, 2rem);
@@ -42,8 +45,9 @@
 					cursor: pointer;
 					margin-top: 20%;
 					@include mobile {
-						width: 90px;
+						width: 80px;
 						height: 50px;
+						margin: 20% 0 0 0;
 					}
 
 					.name {
