--- a/src/pages/clubs/components/all/participating.scss
+++ b/src/pages/clubs/components/all/participating.scss
@@ -17,6 +17,13 @@
 		width: 100%;
 		height: auto;
 
+		.search {
+			position: absolute;
+			width: 400px;
+			height: 50px;
+			top: 2%;
+			border-radius: 15px;
+		}
 		.cards {
 			display: flex;
 			justify-content: space-around;
