--- a/src/pages/clubs/components/all/participating.scss
+++ b/src/pages/clubs/components/all/participating.scss
@@ -19,10 +19,13 @@
 
 		.search {
 			position: absolute;
-			width: 400px;
-			height: 50px;
-			top: 2%;
+			width: 30vw;
+			height: 5vw;
+			top: 0;
 			border-radius: 15px;
+			font-family: "Hind";
+			margin: 5%;
+			text-align: center;
 		}
 		.cards {
 			display: flex;
