--- a/src/pages/get started page/components/activities/activities.scss
+++ b/src/pages/get started page/components/activities/activities.scss
@@ -10,6 +10,9 @@
 	@include ipad {
 		height: 85vh;
 	}
+	@include mobileSmall {
+		height: 90vh;
+	}
 
 	.banner {
 		position: absolute;
@@ -31,6 +34,9 @@
 			top: 5px;
 			left: 50px;
 			padding-left: 15%;
+		}
+		@include mobileSmall {
+			width: 180px;
 		}
 		h1 {
 			color: white;
@@ -77,6 +83,8 @@
 				font-size: clamp(0.9rem, 4vw, 4rem);
 				line-height: 3vh;
 				padding-left: 1.3%;
+			}
+			@include mobileSmall {
 			}
 		}
 	}
