--- a/src/pages/get started page/components/gs2/gs2.scss
+++ b/src/pages/get started page/components/gs2/gs2.scss
@@ -14,6 +14,9 @@
 	@include mobile {
 		height: 77vh;
 	}
+	@include mobile {
+		height: 80vh;
+	}
 
 	.backgroundColumn {
 		height: 100%;
@@ -39,6 +42,10 @@
 			flex: 0.4;
 			width: 98%;
 		}
+		@include mobileSmall {
+			width: 100%;
+		}
+
 		.container {
 			width: 100%;
 			height: 70%;
@@ -74,6 +81,10 @@
 						font-size: clamp(1rem, 3vw, 2rem);
 						line-height: 2.7vh;
 					}
+					@include mobileSmall {
+						font-size: clamp(0.9rem, 1.5vw, 2rem);
+						line-height: 2.5vh;
+					}
 				}
 				h2 {
 					margin-top: 10%;
@@ -87,6 +98,10 @@
 					}
 					@include mobile {
 						margin-top: 60%;
+					}
+					@include mobileSmall {
+						font-size: clamp(0.8rem, 2.5vw, 3rem);
+						line-height: 2vh;
 					}
 				}
 			}
