--- a/src/pages/get started page/components/implications/implications.scss
+++ b/src/pages/get started page/components/implications/implications.scss
@@ -12,6 +12,9 @@
 	@include mobile {
 		height: 255vh;
 	}
+	@include mobileSmall {
+		height: 175vh;
+	}
 
 	.backgroundColumn {
 		height: 98%;
@@ -25,6 +28,9 @@
 		);
 		z-index: 1;
 		position: absolute;
+		@include mobileSmall {
+			height: 100px;
+		}
 	}
 
 	.banner {
@@ -39,6 +45,7 @@
 			height: 5%;
 			width: 100%;
 		}
+
 		h1 {
 			color: white;
 			font-family: "Saira";
@@ -69,6 +76,9 @@
 				height: 100%;
 				object-fit: cover;
 				position: absolute;
+				@include mobileSmall {
+					display: none;
+				}
 			}
 		}
 	}
@@ -84,19 +94,30 @@
 		@include mobile {
 			top: 175px;
 		}
+		@include mobileSmall {
+			width: 80%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			text-align: center;
+			top: 5%;
+		}
 	}
 	.textBox {
 		width: 100%;
 		height: 100%;
 		display: flex;
 		justify-content: center;
-
 		padding-top: 15%;
+		@include mobileSmall {
+			padding-top: 0;
+		}
 		p {
 			color: black;
 			font-family: "Hind";
 			font-size: 1.7vw;
 			line-height: 4.8vh;
+
 			@include ipad {
 				font-size: clamp(0.9rem, 3.5vw, 4rem);
 				line-height: 2.6vh;
