--- a/src/pages/home/components/about/about.scss
+++ b/src/pages/home/components/about/about.scss
@@ -58,6 +58,10 @@
 
 					line-height: 3.3vh;
 				}
+				@include mobileSmall {
+					font-size: clamp(0.7rem, 4vw, 3.5rem);
+					margin: 4% 6%;
+				}
 			}
 		}
 
