--- a/src/pages/get started page/components/resources/book.scss
+++ b/src/pages/get started page/components/resources/book.scss
@@ -17,10 +17,12 @@
 			height: 50vw;
 			margin-bottom: 5%;
 			a {
+				cursor: default;
 				img {
 					width: 100%;
 					height: 100%;
 					object-fit: scale-down;
+					cursor: pointer;
 				}
 			}
 		}
@@ -28,11 +30,14 @@
 			margin-bottom: 1%;
 			width: 30vw;
 			height: 30vw;
+
 			a {
+				cursor: default;
 				img {
 					width: 100%;
 					height: 100%;
 					object-fit: scale-down;
+					cursor: pointer;
 				}
 			}
 		}
