fixed how to join layout

--- a/src/pages/home/components/JoinInfo/JoinInfo.scss
+++ b/src/pages/home/components/JoinInfo/JoinInfo.scss
@@ -1,8 +1,7 @@
 @import "../../../../global.scss";
 
 .joinInfo {
-	height: auto;
-	width: auto;
+	height: 100vh;
 	position: relative;
 	display: flex;
 	align-items: center;
