feat: changes to club page of the project

--- a/src/pages/clubs/components/new/new.scss
+++ b/src/pages/clubs/components/new/new.scss
@@ -23,7 +23,7 @@
 			justify-content: space-around;
 			flex-wrap: wrap;
 			margin-top: 10%;
-
+			width: 100%;
 			.card {
 				position: relative;
 				display: flex;
